linked apiKeys file to index

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         
     </article>
 
+    <script src="scripts/keys.js"></script>
     <script src="scripts/data.js"></script>
     <script src="scripts/factory.js"></script>
     <script src="scripts/dom.js"></script>
