fixed iteration and id numbering for concert name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <button id="concerts-btn"></button>
 
         <h2>Results</h2>
-        <section id="search-results"></section>
+        <section id="search-results">
+            <ol id="event-list"></ol>
+        </section>
 
         <h2>My Itinerary</h2>
         <section id="my-itinerary"></section>
