got restaurant names and addresses to show up in the dom

--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
 
         <h2>Search for stuff to do today:</h2>
 
-        <input type="text" id="parks-input">
-        <button id="parks-btn"></button>
+        <input type="text" id="parks-input" placeholder="parks by feature">
+        <button id="parks-btn">Search</button>
 
-        <input type="text" id="restaurants-input">
-        <button id="restaurants-btn"></button>
+        <input type="text" id="restaurants-input" placeholder="restaurants by food type">
+        <button id="restaurants-btn">Search</button>
 
-        <input type="text" id="meetups-input">
-        <button id="meetups-btn"></button>
+        <input type="text" id="meetups-input" placeholder="meetups by topic">
+        <button id="meetups-btn">Search</button>
 
-        <input type="text" id="concerts-input">
-        <button id="concerts-btn"></button>
+        <input type="text" id="concerts-input" placeholder="concerts by genre">
+        <button id="concerts-btn">Search</button>
 
         <h2>Results</h2>
-        <section id="search-results"></section>
+        <section id="search-results">
+            <ol id="results-list">
+
+            </ol>
+        </section>
 
         <h2>My Itinerary</h2>
-        <section id="my-itinerary"></section>
+        <section id="my-itinerary">
+            <ul id="itinerary-list">
+
+            </ul>
+        </section>
         
     </article>
 
