data displayed. about to start working on user input

--- a/index.html
+++ b/index.html
@@ -31,6 +31,20 @@
             </fieldset>
             <fieldset>
                 <input type="text" id="concerts-input" placeholder="concerts by genre">
+                <select name="music-genres">
+                    <option value="KnvZfZ7vAvv">Alternative</option>
+                    <option value="KnvZfZ7vAvd">Blues</option>
+                    <option value="KnvZfZ7vAv6">Country</option>
+                    <option value="KnvZfZ7vAva">Folk</option>
+                    <option value="KnvZfZ7vAv1">Hip-Hop/Rap</option>
+                    <option value="KnvZfZ7vAev">Pop</option>
+                    <option value="KnvZfZ7vAeA">Rock</option>
+                  </select>
+
+                Hip-Hop/Rap
+                Country
+
+
                 <button id="concerts-btn">Search</button>
             </fieldset>
             
