changed restaurants input to select price options

--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
             </fieldset>
 
             <fieldset>
-                <input type="text" id="restaurants-input" placeholder="restaurants by food type">
-                <button id="restaurants-btn">Search</button>
+                <select id="restaurants-input">
+                    <option value="1">$</option>
+                    <option value="2">$$</option>
+                    <option value="3">$$$</option>
+                    <option value="4">$$$$</option>
+                </select>
+                <button id="restaurants-btn">Search</button>                
             </fieldset>
+
             <fieldset>
                 <input type="text" id="meetups-input" placeholder="meetups by topic">
                 <button id="meetups-btn">Search</button>
             </fieldset>
+
             <fieldset>
                 <input type="text" id="concerts-input" placeholder="concerts by genre">
                 <button id="concerts-btn">Search</button>
