--- a/index.html
+++ b/index.html
@@ -1,38 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Welcome To Nashville</title>
-    <link rel="stylesheet" href="styles/main.css">
-</head>
+    <link rel="stylesheet" href="styles/main.css" />
+  </head>
 
-<body>
+  <body>
     <article id="nash-container">
-        <h1>Welcome to Nashville</h1>
+      <h1>Welcome to Nashville</h1>
 
-        <h2>Search for stuff to do today:</h2>
+      <h2>Search for stuff to do today:</h2>
 
-        <input type="text" id="parks-input">
-        <button id="parks-btn"></button>
+      <fieldset>
+        <input type="radio" name="activities" value="playground" />Playground<br />
+        <input type="radio" name="activities" value="picnic-shelters" /> Picnic Shelters<br />
+        <input type="radio" name="activities" value="dog-parks" /> Dog Parks<br />
+        <input type="radio" name="activities" value="running-trails" /> Running Trails<br />
+      </fieldset>
 
-        <input type="text" id="restaurants-input">
-        <button id="restaurants-btn"></button>
+      <input id="parks-btn" type="submit" value="Submit" />
 
-        <input type="text" id="meetups-input">
-        <button id="meetups-btn"></button>
+      <input type="text" id="restaurants-input" />
+      <button id="restaurants-btn"></button>
 
-        <input type="text" id="concerts-input">
-        <button id="concerts-btn"></button>
+      <input type="text" id="meetups-input" />
+      <button id="meetups-btn"></button>
 
-        <h2>Results</h2>
-        <section id="search-results"></section>
+      <input type="text" id="concerts-input" />
+      <button id="concerts-btn"></button>
 
-        <h2>My Itinerary</h2>
-        <section id="my-itinerary"></section>
-        
+      <h2>Results</h2>
+      <section id="search-results"></section>
+
+      <h2>My Itinerary</h2>
+      <section id="my-itinerary"></section>
     </article>
 
     <script src="scripts/keys.js"></script>
@@ -40,6 +44,5 @@
     <script src="scripts/factory.js"></script>
     <script src="scripts/dom.js"></script>
     <script src="scripts/main.js"></script>
-</body>
-
+  </body>
 </html>
