added select options for genres

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <button id="meetups-btn">Search</button>
             </fieldset>
             <fieldset>
-                <input type="text" id="concerts-input" placeholder="concerts by genre">
+                <!-- <input type="text" id="concerts-input" placeholder="concerts by genre"> -->
+                <label for="music-genres">Concerts by Genre</label>
                 <select name="music-genres">
                     <option value="KnvZfZ7vAvv">Alternative</option>
                     <option value="KnvZfZ7vAvd">Blues</option>
@@ -40,10 +41,6 @@
                     <option value="KnvZfZ7vAev">Pop</option>
                     <option value="KnvZfZ7vAeA">Rock</option>
                   </select>
-
-                Hip-Hop/Rap
-                Country
-
 
                 <button id="concerts-btn">Search</button>
             </fieldset>
