updated js files so that save button works on restaurants

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             </fieldset>
 
             <fieldset>
+                <span>Search Restaurants by Price: </span>
                 <select id="restaurants-input">
                     <option value="price--1">$</option>
                     <option value="price--2">$$</option>
