updated select, input, and button ids to be consistent/clear

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
             <fieldset>
                 <span>Search Restaurants by Price: </span>
-                <select id="restaurants-select">
+                <select id="rest-price-select">
                     <option value="none"></option>
                     <option value="price--1">$</option>
                     <option value="price--2">$$</option>
                     <option value="price--3">$$$</option>
                     <option value="price--4">$$$$</option>
                 </select>
-                <button id="restaurants-btn">Search</button>
+                <button id="rest-price-btn">Search</button>
 
-                <input type="text" id="restaurants-input" placeholder="restaurants by name">
+                <input type="text" id="rest-name-input" placeholder="restaurants by name">
                 <button id="rest-name-btn">Search</button>   
 
                 <input type="text" id="restaurant-street-input" placeholder="restaurants by street name">
