updated address input id to be consistent

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <input type="text" id="rest-name-input" placeholder="restaurants by name">
                 <button id="rest-name-btn">Search</button>   
 
-                <input type="text" id="restaurant-street-input" placeholder="restaurants by street name">
+                <input type="text" id="rest-street-input" placeholder="restaurants by street name">
                 <button id="rest-street-btn">Search</button>                
             </fieldset>
 
