api results for concerts now filtered by genre search

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <fieldset>
                 <!-- <input type="text" id="concerts-input" placeholder="concerts by genre"> -->
                 <label for="music-genres">Concerts by Genre</label>
-                <select name="music-genres">
+                <select name="music-genres" id="music-genres">
                     <option value="KnvZfZ7vAvv">Alternative</option>
                     <option value="KnvZfZ7vAvd">Blues</option>
                     <option value="KnvZfZ7vAv6">Country</option>
