--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <script src="scripts/data.js"></script>
     <script src="scripts/factory.js"></script>
     <script src="scripts/dom.js"></script>
+    <script src="scripts/main-restaurants.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
