--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <script src="scripts/factory.js"></script>
     <script src="scripts/dom.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/main-concerts.js"></script>
 </body>
 
 </html>
