logged user input to console

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h2>Search for stuff to do today:</h2>
 
       <fieldset>
-        <input id="playgrounds" type="radio" name="activities" value=${fetchPlaygroundData}> Playgrounds<br />
-        <input id="picnic-shelters" type="radio" name="activities" value=${picnicShelters} /> Picnic Shelters<br />
-        <input id="dog-parks" type="radio" name="activities" value=${dogParks} /> Dog Parks<br />
-        <input id="running-trails" type="radio" name="activities" value=${runningTrails} /> Running Trails<br />
+        <input id="playground" type="radio" name="activities" value="playground"> Playgrounds<br />
+        <input id="picnic-shelters" type="radio" name="activities" value="picnic_shelters"> Picnic Shelters<br />
+        <input id="dog-parks" type="radio" name="activities" value="dog_park" > Dog Parks<br />
+        <input id="running-trails" type="radio" name="activities" value="walk_jog_paths" > Running Trails<br />
       </fieldset>
 
       <input id="parks-btn" type="submit" value="Submit" />
@@ -43,6 +43,6 @@
     <script src="scripts/data.js"></script>
     <script src="scripts/factory.js"></script>
     <script src="scripts/dom.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main-parks.js"></script>
   </body>
 </html>
