--- a/index.html
+++ b/index.html
@@ -1,89 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Welcome To Nashville</title>
-    <link rel="stylesheet" href="styles/main.css" />
-  </head>
 
-  <body>
-    <article id="nash-container">
-      <h1>Welcome to Nashville</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Welcome To Nashville</title>
+  <link rel="stylesheet" href="styles/main.css" />
+  <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto&display=swap" rel="stylesheet" />
+</head>
 
-      <h2>Search for stuff to do today:</h2>
-      
-      <section id="search-container">
-      <fieldset>
-        <input id="playground" type="radio" name="activities" value="playground"> Playgrounds<br />
-        <input id="picnic-shelters" type="radio" name="activities" value="picnic_shelters"> Picnic Shelters<br />
-        <input id="dog-parks" type="radio" name="activities" value="dog_park" > Dog Parks<br />
-        <input id="running-trails" type="radio" name="activities" value="walk_jog_paths" > Running Trails<br />
-        <input id="parks-btn" type="submit" value="Submit" />
+<body>
+  <article id="nash-container">
+    <h1 class="heading--large">Welcome to Nashville</h1>
+
+    <h2 class="heading--medium">Search for stuff to do today:</h2>
+    <section id="search-container">
+      <fieldset id="parks-search-options">
+        <label for="parks">Search Parks by Feature:</label>
+        <input class="park-buttons" id="playground" type="radio" name="activities" value="playground">Playgrounds
+        <input class="park-buttons" id="picnic-shelters" type="radio" name="activities" value="picnic_shelters"> Picnic Shelters
+        <input class="park-buttons" id="dog-parks" type="radio" name="activities" value="dog_park"> Dog Parks
+        <input class="park-buttons" id="running-trails" type="radio" name="activities" value="walk_jog_paths"> Running Trails
+        <input class="park-buttons search-buttons" id="parks-btn" type="submit" value="Search">
       </fieldset>
 
       <fieldset>
-          <span>Search Restaurants by Price: </span>
-          <select id="rest-price-select">
-              <option value="none"></option>
-              <option value="price--1">$</option>
-              <option value="price--2">$$</option>
-              <option value="price--3">$$$</option>
-              <option value="price--4">$$$$</option>
-          </select>
-          <button id="rest-price-btn">Search</button>
+        <span>Search Restaurants By: Price </span>
+        <select id="rest-price-select">
+          <option value="none"></option>
+          <option value="price--1">$</option>
+          <option value="price--2">$$</option>
+          <option value="price--3">$$$</option>
+          <option value="price--4">$$$$</option>
+        </select>
+        <button class="search-buttons" id="rest-price-btn">Search</button>
 
-          <input type="text" id="rest-name-input" placeholder="restaurants by name">
-          <button id="rest-name-btn">Search</button>   
+        <input type="text" class="rest-inputs" id="rest-name-input" placeholder="Name">
+        <button class="search-buttons" id="rest-name-btn">Search</button>
 
-          <input type="text" id="rest-street-input" placeholder="restaurants by street name">
-          <button id="rest-street-btn">Search</button>                
+        <input type="text" class="rest-inputs" id="rest-street-input" placeholder="Street Name">
+        <button class="search-buttons" id="rest-street-btn">Search</button>
       </fieldset>
 
       <fieldset>
-          <label for="music-genres">Concerts by Genre</label>
-          <select name="music-genres" id="music-genres">
-              <option value="KnvZfZ7vAvv">Alternative</option>
-              <option value="KnvZfZ7vAvd">Blues</option>
-              <option value="KnvZfZ7vAv6">Country</option>
-              <option value="KnvZfZ7vAva">Folk</option>
-              <option value="KnvZfZ7vAv1">Hip-Hop/Rap</option>
-              <option value="KnvZfZ7vAev">Pop</option>
-              <option value="KnvZfZ7vAeA">Rock</option>
-            </select>
+        <label for="music-genres">Search Concerts by Genre:</label>
+        <select name="music-genres" id="music-genres">
+          <option value="KnvZfZ7vAvv">Alternative</option>
+          <option value="KnvZfZ7vAvd">Blues</option>
+          <option value="KnvZfZ7vAv6">Country</option>
+          <option value="KnvZfZ7vAva">Folk</option>
+          <option value="KnvZfZ7vAv1">Hip-Hop/Rap</option>
+          <option value="KnvZfZ7vAev">Pop</option>
+          <option value="KnvZfZ7vAeA">Rock</option>
+        </select>
 
-          <button id="concerts-btn">Search</button>
+        <button class="search-buttons" id="concerts-btn">Search</button>
       </fieldset>
-      
-  </section>
+    </section>
 
+    <h2 class="heading--medium">Results</h2>
+    <section id="search-results">
+      <ol id="results-list">
 
-        <h2>Results</h2>
-        <section id="search-results">
-            <ol id="results-list">
+      </ol>
+    </section>
 
-            </ol>
-        </section>
+    <h2 class="heading--medium">My Itinerary</h2>
+    <section id="my-itinerary">
+      <ul id="itinerary-list">
+        <li id="itinerary--1">Park: </li>
+        <li id="itinerary--2">Restaurant: </li>
+        <li id="itinerary--4">Concert: </li>
+      </ul>
+    </section>
 
-        <h2>My Itinerary</h2>
-        <section id="my-itinerary">
-            <ul id="itinerary-list">
-                <li id="itinerary--1">Park: </li>
-                <li id="itinerary--2">Restaurant: </li>
-                <li id="itinerary--4">Concert: </li>
-            </ul>
-        </section>
+  </article>
 
-    </article>
-
-    <script src="scripts/keys.js"></script>
-    <script src="scripts/data.js"></script>
-    <script src="scripts/factory.js"></script>
-    <script src="scripts/dom.js"></script>
-    <script src="scripts/main-parks.js"></script>
-    <script src="scripts/main-restaurants.js"></script>
-    <script src="scripts/main-concerts.js"></script>
+  <script src="scripts/keys.js"></script>
+  <script src="scripts/data.js"></script>
+  <script src="scripts/factory.js"></script>
+  <script src="scripts/dom.js"></script>
+  <script src="scripts/main-parks.js"></script>
+  <script src="scripts/main-restaurants.js"></script>
+  <script src="scripts/main-concerts.js"></script>
 </body>
 
 </html>
